--- a/tidyverse.html
+++ b/tidyverse.html
@@ -1766,6 +1766,8 @@ full_join(x = fertility_df, y = infant_mortality_df)
 
 ---
 
+# Mutating joins
+
 Using the `full_join` fn a message appeared: `Joining, by = c("geo", "TIME")`. The fn linked the two datasets based on the identical names (keys). But what happens if a given value can be found only in one table? We have 4 options to that:
 
 - inner_join(): includes all rows in x and y.
@@ -1778,7 +1780,13 @@ Using the `full_join` fn a message appeared: `Joining, by = c("geo", "TIME")`. T
 
 ---
 
+---
 
+class: center, middle
+
+# Thank you for your attention!
+
+Slides are available at [www.marcellgranat.com](https://www.marcellgranat.com)
 
 
     </textarea>
