--- a/correlation.html
+++ b/correlation.html
@@ -82,10 +82,10 @@ text-decoration: line-through;
 
 3. Variance analysis
 
-### Session 2 - Introduction to .fullprice[Multi]Tidyverse 🌐
+### Session 2 - Introduction to .fullprice[Multi]Tidyverse 🌏
 
 
-2. {dplyr} ⛏
+2. {dplyr} 🔮
 
 3. {tidyr} 🧹
 
@@ -226,7 +226,7 @@ class: inverse, middle, center
 
 --
 
-.blue[Why we say its positive or negative?]
+.blue[Why do we say its positive or negative?]
 
 --
 
@@ -469,6 +469,14 @@ The key equation:
 .content-box-green[
 Based on the above equations, we can see that in the case of variance analysis, we compare how large the variance of the group averages is compared to the total variance.
 ]
+
+---
+
+class: center, middle
+
+# Thank you for your attention!
+
+Slides are available at [www.marcellgranat.com](https://www.marcellgranat.com)
 
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
