--- a/correlation.html
+++ b/correlation.html
@@ -85,15 +85,9 @@ text-decoration: line-through;
 ### Session 2 - Introduction to .fullprice[Multi]Tidyverse 🌏
 
 
-2. {dplyr} 🔮
+2. {dplyr} 🔬
 
 3. {tidyr} 🧹
-
-4. {stringr} 🔤
-
-5. {forcats} 🐱
-
-6. {purrr} ♾️
 
 ---
 
@@ -439,7 +433,7 @@ From the summary table: `\(102.85\)`
 
 .blue[Step 3.] Calculate the `\(H^2\)`.
 
-`$$H^2=\frac{SST-SSW}{SST}=\frac{102.85 - 39.75}{124.2}= .61$$`
+`$$H^2=\frac{SST-SSW}{SST}=\frac{102.85 - 39.75}{102.85}= .61$$`
 
 ---
 
