--- a/tidyverse.html
+++ b/tidyverse.html
@@ -37,17 +37,6 @@ Big Data and Data Visualisation
 ---
 
 
-
-background-image: url("tidyverse_files/tidyverse-intro.png")
-background-position: center
-background-size: contain
-
-# The tidyverse
-
-???
-
-tidyverse.org
-
 &lt;style type="text/css"&gt;
 .red { color: red; }
 .blue { color: #378C95; }
@@ -82,6 +71,34 @@ text-decoration: line-through;
 
 
 
+# Today's .blue[Agenda]
+
+### Session 1 - Pairwise "correlation" methods
+
+1. Contingency 📊
+
+2. Pearson 
+
+3. Variance analysis
+
+### Session 2 - Introduction to .fullprice[Multi]Tidyverse 🌏
+
+
+2. {dplyr} 🏺
+
+3. {tidyr} 🧹
+
+---
+
+background-image: url("tidyverse_files/tidyverse-intro.png")
+background-position: center
+background-size: contain
+
+# The tidyverse
+
+???
+
+tidyverse.org
 ---
 
 # The tidyverse
@@ -370,9 +387,6 @@ background-size: contain
 ---
 
 # Manipulate - select
-
-
---
 
 `select()`  Extract the specified columns as a table.
 
@@ -1087,7 +1101,7 @@ background-size: contain
 
 # Pivot_wider
 
-Datasets are in long on wide format (but never in the currently desired one `ji("laugh")`)
+Datasets are in long on wide format (but never in the currently desired one 😂)
 
 (The following example is the one we saw last week to present the apply functions. In STATA you mainly operate with tables in wide format)
 
@@ -1167,6 +1181,8 @@ Lets download the [infant mortality rates from Eurostat](https://appsso.eurostat
 &lt;img src="tidyverse_files/eurostat-infant.png" width="4565" style="display: block; margin: auto;" /&gt;
 
 ---
+
+### Example
 
 
 ```r
