--- a/tidyverse2.html
+++ b/tidyverse2.html
@@ -108,7 +108,7 @@ background-size: contain
 
 &gt; All functions in stringr start with `str_` and take a **vector of strings as the first argument**.
 
-This makes it easy to find the string manipulation function you need 😆
+This makes it easy to find the string manipulation function you need 😃
 
 --
 
