missing package requirement on slides

--- a/inferential-statistics.html
+++ b/inferential-statistics.html
@@ -480,8 +480,10 @@ shiny::runGitHub("statistical-estimation",
                  "marcellgranat", ref = "main")
 ```
 
-`$$f(x)=\frac{1}{\sigma \sqrt{2 \pi}} e^{-\frac{1}{2}\left(\frac{x-\mu}{\sigma}\right)^2}$$`
+You need to install 4 packages to use it: `shiny`, `shinydashboard`, `shinyWidgets` &amp; `tidyverse`
 
+`$$f(x)=\frac{1}{\sigma \sqrt{2 \pi}} e^{-\frac{1}{2}\left(\frac{x-\mu}{\sigma}\right)^2}$$`
+˜˜
 --
 
 **Distribution** and **.blue[density]** function of normal distribution
