update slide layout

--- a/inferential-statistics.html
+++ b/inferential-statistics.html
@@ -482,13 +482,17 @@ shiny::runGitHub("statistical-estimation",
 
 You need to install 4 packages to use it: `shiny`, `shinydashboard`, `shinyWidgets` &amp; `tidyverse`
 
+---
+
+## Normal distribution
+
+.blue[Density] function:
+
 `$$f(x)=\frac{1}{\sigma \sqrt{2 \pi}} e^{-\frac{1}{2}\left(\frac{x-\mu}{\sigma}\right)^2}$$`
-˜˜
---
 
 **Distribution** and **.blue[density]** function of normal distribution
 
-&lt;img src="inferential-statistics_files/figure-html/unnamed-chunk-23-1.png" height="250" style="display: block; margin: auto;" /&gt;
+&lt;img src="inferential-statistics_files/figure-html/unnamed-chunk-23-1.png" height="300" style="display: block; margin: auto;" /&gt;
 
 ---
 
