--- a/inferential-statistics.html
+++ b/inferential-statistics.html
@@ -101,11 +101,20 @@ class: inverse, middle, center
 
 Three main headings:
 
+
+.pull-left[
+
 1. Point estimation
 
 2. Interval estimation
 
 3. Testing of hypotheses
+]
+
+.pull-right[
+&lt;img src="tidyverse2_files/meme_estimate.png" width="1107" style="display: block; margin: auto;" /&gt;
+
+]
 
 ???
 
@@ -440,7 +449,7 @@ Sample variance:
 
 .pull-right[
 
-&lt;img src="tidyverse2_files/meme_assumption Közepes.jpeg" width="819" style="display: block; margin: auto;" /&gt;
+&lt;img src="tidyverse2_files/meme_assumption.png" width="1104" style="display: block; margin: auto;" /&gt;
 ]
 
 
@@ -492,7 +501,7 @@ You need to install 4 packages to use it: `shiny`, `shinydashboard`, `shinyWidge
 
 **Distribution** and **.blue[density]** function of normal distribution
 
-&lt;img src="inferential-statistics_files/figure-html/unnamed-chunk-23-1.png" height="300" style="display: block; margin: auto;" /&gt;
+&lt;img src="inferential-statistics_files/figure-html/unnamed-chunk-24-1.png" height="300" style="display: block; margin: auto;" /&gt;
 
 ---
 
@@ -504,7 +513,7 @@ goal: Find `\(g_1\)` and `\(g_2\)`
 
 If the distribution is normal distribution, and mean = 0, sd = 1 (standard normal distribution), then
 
-&lt;img src="inferential-statistics_files/figure-html/unnamed-chunk-24-1.png" height="250" style="display: block; margin: auto;" /&gt;
+&lt;img src="inferential-statistics_files/figure-html/unnamed-chunk-25-1.png" height="250" style="display: block; margin: auto;" /&gt;
 
 2.5% of standard normally distributed variables are smaller than -1.959964.
 
@@ -514,7 +523,7 @@ If the distribution is normal distribution, and mean = 0, sd = 1 (standard norma
 
 ## Interval estimation
 
-&lt;img src="inferential-statistics_files/figure-html/unnamed-chunk-25-1.png" height="250" style="display: block; margin: auto;" /&gt;
+&lt;img src="inferential-statistics_files/figure-html/unnamed-chunk-26-1.png" height="250" style="display: block; margin: auto;" /&gt;
 
 97.5% of standard normally distributed variables are smaller than 1.959964.
 
@@ -522,7 +531,7 @@ If the distribution is normal distribution, and mean = 0, sd = 1 (standard norma
 
 ## Interval estimation
 
-&lt;img src="inferential-statistics_files/figure-html/unnamed-chunk-26-1.png" height="250" style="display: block; margin: auto;" /&gt;
+&lt;img src="inferential-statistics_files/figure-html/unnamed-chunk-27-1.png" height="250" style="display: block; margin: auto;" /&gt;
 
 95% of standard normally distributed variables are between -1.959964 and 1.959964.
 
@@ -632,6 +641,14 @@ Lower bound = `\(55 - .375 \times 1.96\)`
 
 Upper bound = `\(55 + .375 \times 1.96\)`
 
+
+---
+
+# References
+
+&lt;p&gt;&lt;cite&gt;Maddala, G. and K. Lahiri
+(2009).
+&lt;em&gt;Introduction to Econometrics, 4th Editon&lt;/em&gt;.&lt;/cite&gt;&lt;/p&gt;
 
 ---
 
