--- a/inferential-statistics2.html
+++ b/inferential-statistics2.html
@@ -81,11 +81,11 @@ text-decoration: line-through;
 
 3. Hypothesis testing in R
 
-4. Univariate testing
+4. One-sample testing
 
-5. Bivariate testing
+5. Two-sample tests
 
-6. Multivariate testing
+6. Multiple-sample tests
 
 ---
 
@@ -838,6 +838,12 @@ With a given number of sample size, the probability of committing a type II erro
 
 ---
 
+## Type I &amp; type II errors
+
+&lt;img src="inferential_statistics2_files/meme_error.jpg" width="300px" height="480" style="display: block; margin: auto;" /&gt;
+
+---
+
 ## How to make a decision about the .blue[null hypothesis]?
 
 - Calculate the test statistics and compare it to the critical values.
@@ -855,7 +861,7 @@ With a given number of sample size, the probability of committing a type II erro
 `$$H_0: \: \mu \ge 45 \: \text{against} \: H_1: \: \mu &lt; 45$$`
 `$$z = \frac{44-45}{2/\sqrt{365}}=-9.5525$$`
 
-&lt;img src="inferential-statistics2_files/figure-html/unnamed-chunk-39-1.png" width="700px" height="200px" style="display: block; margin: auto;" /&gt;
+&lt;img src="inferential-statistics2_files/figure-html/unnamed-chunk-40-1.png" width="700px" height="200px" style="display: block; margin: auto;" /&gt;
 
 ---
 
@@ -912,7 +918,9 @@ For illustrative reasons, let's modify the context again.
 `$$\bar{x} = 46$$`
 ]
 
-&lt;img src="inferential-statistics2_files/figure-html/unnamed-chunk-43-1.png" width="700px" height="200px" style="display: block; margin: auto;" /&gt;
+&lt;img src="inferential-statistics2_files/figure-html/unnamed-chunk-44-1.png" width="700px" height="200px" style="display: block; margin: auto;" /&gt;
+
+--
 
 .pull-left[
 `$$z = \frac{46-45}{2/\sqrt{365}}=9.5525$$`
@@ -921,17 +929,248 @@ For illustrative reasons, let's modify the context again.
 .pull-right[
 
 ```r
-qnorm(9.5525)
+pnorm(9.5525)
 ```
 
 ```
-## [1] NaN
+## [1] 1
 ```
 ]
 
+---
+
+## How to make a decision about the .blue[null hypothesis]?
+
+For illustrative reasons, let's modify the context again.
+
+.pull-left[
+`$$H_0: \: \mu \leq 45 \: \text{against} \: H_1: \: \mu &gt; 45$$`
+]
+
+.pull-right[
+`$$\bar{x} = 46$$`
+]
+
+.pull-left[
+`$$z = \frac{46-45}{2/\sqrt{365}}=9.5525$$`
+]
+
+.pull-right[
+
+```r
+pnorm(9.5525)
+```
+
+```
+## [1] 1
+```
+]
+
+- .blue[IDEA:] in the case of "more" alternative, substitute the test statistics into the probability function, **subtract it from 1**, and if the resulting value (**p-value**) is lower than the significance level, you can reject the null.
+
+
+```r
+1 - pnorm(9.5525)
+```
+
+```
+## [1] 0
+```
+
+---
+
+## How to make a decision about the .blue[null hypothesis]?
+
+For illustrative reasons, let's modify the context again.
+
+.pull-left[
+`$$H_0: \: \mu = 45 \: \text{against} \: H_1: \: \mu \neq 45$$`
+]
+
+.pull-right[
+`$$\bar{x} = 45.2$$`
+]
+
+`$$z = \frac{45.2-45}{2/\sqrt{365}}=1.910497$$`
+
+.pull-left[
+
+P-value:
+
+
+```
+## [1] 0.05606925
+```
+]
+
+.pull[
+&lt;img src="inferential_statistics2_files/meme_no_accept.jpg" width="300px" height="150px" style="display: block; margin: auto;" /&gt;
+
+]
+
+---
+
+class: inverse, middle, center
+
+## T-test
+
+---
+
+## T-test
+
+- Same theoretical consideration as at the estimation: population variance is unknown (mainly we use this)
+
+- Same steps, but use the `qt` function
+
+
+```
+## [1] -1.649051
+```
+
+**Critical values are further from the H0 average!**
+
+---
+
+## Code in R
 
 
 
+
+```
+## 
+## 	One Sample t-test
+## 
+## data:  s_length
+## t = 100.42, df = 49, p-value &lt; 2.2e-16
+## alternative hypothesis: true mean is not equal to 0
+## 95 percent confidence interval:
+##  4.905824 5.106176
+## sample estimates:
+## mean of x 
+##     5.006
+```
+---
+
+## Code in R
+
+
+```
+## 
+## 	One Sample t-test
+## 
+## data:  s_length
+## t = 0.12036, df = 49, p-value = 0.4523
+## alternative hypothesis: true mean is greater than 5
+## 95 percent confidence interval:
+##  4.922425      Inf
+## sample estimates:
+## mean of x 
+##     5.006
+```
+
+---
+
+class: inverse, middle, center
+
+## Test of Proportion
+
+---
+
+## Test of Proportion
+
+.pull-left[
+
+
+Proportion in the population:
+
+`$$P = \frac{K}{N}$$`
+
+]
+
+.pull-right[
+
+Estimator:
+
+`$$p = \frac{k}{n}$$`
+
+]
+
+The proportion in a given sample follows binomial distribution.
+
+.pull-left[
+`$$\text{Var}(p) = \frac{P(1-P)}{n}$$`
+]
+
+.pull-left[
+Estimator:
+`$$s_p^2 = \frac{p(1-p)}{n-1}$$`
+
+]
+
+In the case of a large sample, due to the CLT, the binomial distribution also approaches the normal distribution, so after determining the standard error, we perform the same steps as in the case of the simple z-test.
+
+---
+
+class: inverse, center, middle
+
+# Two-sample tests
+
+---
+
+Comparing the properties of two samples taken from different populations.
+
+One frequent application: compare returns!
+
+
+```
+## Error in html_table(.): could not find function "html_table"
+```
+
+
+```r
+library(magrittr)
+
+download_yahoo &lt;- . %&gt;% 
+  str_remove_all(".+(?&lt;=quote/)|/history?|&amp;frequency=1d") %&gt;% 
+  str_replace("filter", "events") %&gt;% 
+  str_c("https://query1.finance.yahoo.com/v7/finance/download/", .) %&gt;% 
+  read_csv() %&gt;% 
+  arrange(desc(Date))
+```
+
+
+```
+## # A tibble: 13,028 × 7
+##    Date         Open   High    Low  Close `Adj Close`     Volume
+##    &lt;date&gt;      &lt;dbl&gt;  &lt;dbl&gt;  &lt;dbl&gt;  &lt;dbl&gt;       &lt;dbl&gt;      &lt;dbl&gt;
+##  1 2022-09-30 10698. 10883. 10572. 10576.      10576. 4649710000
+##  2 2022-09-29 10894. 10899. 10623. 10738.      10738. 4516630000
+##  3 2022-09-28 10818. 11102. 10776. 11052.      11052. 4556100000
+##  4 2022-09-27 10955. 11041. 10741. 10830.      10830. 4445050000
+##  5 2022-09-26 10833. 11024  10789. 10803.      10803. 4697730000
+##  6 2022-09-23 10953. 10958. 10733. 10868.      10868. 5134350000
+##  7 2022-09-22 11167. 11204. 11025. 11067.      11067. 4916470000
+##  8 2022-09-21 11466. 11614. 11219. 11220.      11220. 4471000000
+##  9 2022-09-20 11440. 11521. 11344. 11425.      11425. 4028100000
+## 10 2022-09-19 11339. 11538. 11338. 11535.      11535. 4168670000
+## # … with 13,018 more rows
+```
+
+---
+
+# References
+
+&lt;p&gt;&lt;cite&gt;Maddala, G. and K. Lahiri
+(2009).
+&lt;em&gt;Introduction to Econometrics, 4th Editon&lt;/em&gt;.&lt;/cite&gt;&lt;/p&gt;
+
+---
+
+class: center, middle
+
+# Thank you for your attention!
+
+Slides are available at [www.marcellgranat.com](https://www.marcellgranat.com)
 
 
 
